--- a/apps/users/templates/users/panel/panel.html
+++ b/apps/users/templates/users/panel/panel.html
@@ -10,7 +10,7 @@
             <li class="bold"><a class="collapsible-header  waves-effect waves-teal">Mantenimientos</a>
                 <div class="collapsible-body">
                     <ul>
-                        <li><a href="{% url 'users_app:panel_docente' %}">Docentes</a></li>
+                        <li><a href="{% url 'asistencia_app:panel_docente' %}">Docentes</a></li>
                         <li><a href="#">Admistrativos</a></li>
                         <li><a href="#">Asignatura</a></li>
                         <li><a href="#">Carreras Profesionales</a></li>
